--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -19,6 +19,6 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.Tabs.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.Tabs.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Android.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Android.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
