--- a/android/app/src/main/res/layout/fragment_list.xml
+++ b/android/app/src/main/res/layout/fragment_list.xml
@@ -3,12 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ListDone">
+    tools:context=".fragments.ListTodoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="I am second" />
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
